fix: spacing between code blocks and comment components

--- a/src/assets/colors/dark.css
+++ b/src/assets/colors/dark.css
@@ -18,6 +18,7 @@
   --color-background-code: #d5d7d8;
   --color-avatar-border: #212326;
   --color-card-hover: #212326;
+  --color-divide: #616161;
   --toc-level-2: #e3e3e3;
   --toc-level-3: #b0b0b0;
   --toc-level-4: #636363;
