--- a/src/assets/colors/light.css
+++ b/src/assets/colors/light.css
@@ -18,6 +18,7 @@
   --color-highlight-background: #212326;
   --color-card-hover: #dddbd9;
   --color-avatar-border: #dddbd9;
+  --color-divide: #c3c3c3;
   --toc-level-2: #333;
   --toc-level-3: #333;
   --toc-level-4: #555;
